--- a/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 	compileOnly project(":apps:commerce:commerce-product-api")
 	compileOnly project(":apps:commerce:headless:headless-commerce:headless-commerce-admin-catalog-api")
 	compileOnly project(":apps:commerce:headless:headless-commerce:headless-commerce-admin-channel-api")
+	compileOnly project(":apps:dispatch:dispatch-api")
+	compileOnly project(":apps:dispatch:dispatch-talend-api")
 	compileOnly project(":apps:document-library:document-library-api")
 	compileOnly project(":apps:dynamic-data-mapping:dynamic-data-mapping-api")
 	compileOnly project(":apps:fragment:fragment-api")
