LPS-143471 Add test to dispatch trigger

--- a/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender-test/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-extender/site-initializer-extender-test/build.gradle
@@ -4,6 +4,7 @@ dependencies {
 	testIntegrationCompile project(":apps:commerce:commerce-inventory-api")
 	testIntegrationCompile project(":apps:commerce:commerce-notification-api")
 	testIntegrationCompile project(":apps:commerce:commerce-product-api")
+	testIntegrationCompile project(":apps:dispatch:dispatch-api")
 	testIntegrationCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-api")
 	testIntegrationCompile project(":apps:fragment:fragment-api")
 	testIntegrationCompile project(":apps:journal:journal-api")
